Bug 90256 - DockPos of -1, -1 results in an apparent "missing" toolbar
Summary: DockPos of -1, -1 results in an apparent "missing" toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.5.0 target:4.4.3
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-26 13:29 UTC by Caolán McNamara
Modified: 2015-03-30 08:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
replacement registrymodifications.xcu (3.52 KB, application/xml)
2015-03-26 13:29 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2015-03-26 13:29:13 UTC
Created attachment 114378 [details]
replacement registrymodifications.xcu

overwrite registrymodifications.xcu with the attached, launched writer, view->toolbars->drawing and the expected toolbar position at the bottom of the window is blank with no apparent toolbar in it.

I think negative positions are simply invalid so filtering them out at load seems a suitable repair strategy, no idea how this comes to pass though, but this is a real config portion found in the wild
Comment 1 Commit Notification 2015-03-26 13:38:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c22024f41029dd4c1dca6b265d1fd0f14fc2f95

Resolves: tdf#90256 repair invalid docking positions

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2015-03-30 08:55:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9d918f5c4b19f2ac32cd5fa9c867a4777278d787&h=libreoffice-4-4

Resolves: tdf#90256 repair invalid docking positions

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.