Resolves: tdf#90256 repair invalid docking positions

Change-Id: If144a867dc4be6975c08cd1eea9ebb540975aafc
(cherry picked from commit 3c22024f41029dd4c1dca6b265d1fd0f14fc2f95)
Reviewed-on: https://gerrit.libreoffice.org/15020
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>